--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bcrypt": "^3.0.8",
     "cloudinary": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
