--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Gorlanova/project-02-worldmap#readme",
   "dependencies": {
     "async": "^3.1.1",
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.8",
     "cloudinary": "^1.19.0",
     "connect-flash": "^0.1.1",
