--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./server.js -e .js,.hbs",
-    "start-prod": "node ./bin/www",
-    "start": "nodemon ./bin/www -e .hbs,.js",
+    "start": "node ./bin/www",
+    "start-dev": "nodemon ./bin/www -e .hbs,.js",
     "seed": "node ./bin/seeds.js"
   },
   "repository": {
