--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "project-02-worldmap",
   "version": "1.0.0",
+  "engines": {
+    "node": "13.1.0"
+  },
   "description": "THE BEST PROJECT EVAAA",
   "main": "index.js",
   "scripts": {
