--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "project-02-worldmap",
   "version": "1.0.0",
   "engines": {
-    "node": "13.1.0"
+    "node": "13.1.0",
+    "npm": "6.13.7"
   },
   "description": "THE BEST PROJECT EVAAA",
   "main": "index.js",
